# app_fastAPI

./: .env.example  README.md  main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 4966c80f484f_add_verify.py  7713b3b23af5_init.py  e7d9b0c6daed_add_table_users.py  fe084db37c29_add_verify_user.py
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16394  16397  16399  16404  16406  16408  16413  16415  16450  16451  16456  16457  16459  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+5 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  notes.py  tags.py  users.py
src/routes/: auth.py  contacts.py  notes.py  tags.py  users.py
src/schemas/: schemas.py  user.py
src/services/: auth.py
tests/: conftest.py  test_unit_repository_contact.py
